1998-10-14  Yo Ric Dude  <ricdude@ix.netcom.com>

	* Makefile.am: esdctl now uses getopt_long, and therefore needs
	the LIBOBJS in it's LDADD.

	* esdctl.c: beefed up esdctl for industrial grade use.  added an
 	exit_usage function, and getopt style option parsing.  It was
 	destined to become esdsh, but this in combination with a real
 	scripting language should be suffient.

1998-10-13  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esdlib.c, proto.c: trap for NULL name sent to sample_getid(),
 	and check for sample names beyond the head of the list.

Mon Oct 12 23:12:03 CDT 1998 Frank Belew <frb@umr.edu>

	* esd.h: removed anything resembling a socket header
	* esd-server.h: added everything removed from esd.h
	* audio_alsa.c: #include esd.h instead of esd-server.h since sockets 
	are not needed.
	* esdlib.c: removed superfluous headers that are already included from
	esd-server.h

1998-10-10  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esd-server.h, esd.c, esd.h, esdlib.c, mix.c, proto.c, filter.c,
 	esdfilt.c Makefile.am, .cvsignore: filter patch courtesy of Bibek
 	Sahu. ten points to the first person to create esdequalizer. does
 	libgsl do digital filters?

Tue Oct  6 20:57:37 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.c: nanosleep in the no data ready case too, so we don't
	suck up CPU

Sat Oct  3 13:31:29 PDT 1998 Manish Singh <yosh@gimp.org>

	* audio.c: added driver_trace variable for sound driver debug
	messages

	* audio_alsa.c: use driver_trace instead of esdbg_trace, since
	that's limited to the server. Fix Pav's completely broken fix.

Thu Oct  1 19:27:22 PDT 1998 Manish Singh <yosh@gimp.org>

	* esd.m4: make it work right

1998-10-01  Yo Ric Dude  <ricdude@piranha>

	* esound.spec[.in]: make autoconf do the version updating for us.

	* Makefile.am, configure.in: move version updating to same place.

1998-10-01  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_alsa.c: multiple audio card detection patches from Bibek.